# agama-cli

./: Cargo.toml  README.md
agama-cli/: Cargo.toml
agama-cli/src/: main.rs
agama-derive/: Cargo.toml
agama-derive/src/: lib.rs
agama-lib/: Cargo.toml
agama-lib/share/: profile.schema.json
agama-lib/src/: proxies.rs  settings.rs
dbus/: org-opensuse-DInstaller-Language1.xml  org-opensuse-DInstaller-Manager1.xml  org-opensuse-DInstaller-Questions1.xml  org-opensuse-DInstaller-Software-Proposal1.xml  org-opensuse-DInstaller-Software1.xml  org-opensuse-DInstaller-Storage1-Proposal.xml  org-opensuse-DInstaller-Storage1.xml  org-opensuse-DInstaller-Users1.xml
dinstaller-bin/: Cargo.toml
dinstaller-cli/: Cargo.toml
dinstaller-cli/doc/: CLI_API.md  backend-for-testing.md
dinstaller-cli/src/: actions.rs  cli.rs  commands.rs  config.rs  lib.rs  main.rs  printers.rs  profile.rs  progress.rs
dinstaller-cli/src/commands/: config.rs
dinstaller-derive/: Cargo.toml
dinstaller-derive/src/: lib.rs
dinstaller-lib/: Cargo.toml
dinstaller-lib/share/: profile.schema.json
dinstaller-lib/share/examples/: profile.json  profile.jsonnet
dinstaller-lib/src/: attributes.rs  dinstaller.rs  error.rs  hwinfo.rs  install_settings.rs  lib.rs  manager.rs  profile.rs  progress.rs  proxies.rs  questions.rs  settings.rs  software.rs  storage.rs  store.rs  users.rs
dinstaller-lib/src/store/: software.rs  storage.rs  users.rs
inst-auto/: auto.sh  dinstaller-auto.service
package/: agama-cli.spec  d-installer-cli.changes  d-installer-cli.spec
(+1 files in other folders)
