[package]
name = "dinstaller-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "3.7.0"
serde = { version = "1.0.152", features = ["derive"] }
dinstaller-derive = { path="../dinstaller-derive" }
async-std = "1.12.0"
curl = "0.4.44"
jsonschema = { version = "0.16.1", default-features = false }
features = { version = "0.10.0", default-features = false }
serde_json = "1.0.94"
